# ai-reader

./: .gitignore  .mcp.json  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  install.sh  pyproject.toml  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  install-test.yml
.serena/: project.yml
_docs/audit/: 2026-06-21_bro_review.md  2026-06-21_handoff_review.md
_docs/audit/2026-06-21-32-repo-scan/: SUMMARY.md
_docs/handoff/: 2026-06-21_session-end.md
_docs/knowledge/: source-repos.md
docs/: access-control.md  architecture.md  migration.md  parsers.md  security.md
examples/: custom_detector.py
examples/audits/: README.md  completeness_check.py  dry_run_check.py  quality_check.py
examples/mcp_configs/: antigravity.json  codex.toml  opencode.jsonc  pi.json
install/: README.md  agent-configs.sh
src/ai_reader/: __init__.py  __main__.py  agents.py  cli.py  find_file_edits.py  legacy_compat.py  mcp_server.py  session.py
tests/: __init__.py  conftest.py  test_agents.py  test_cli.py  test_legacy_compat.py  test_mcp.py  test_session.py
tests/exporters/: test_rounds.py
tests/fixtures/: antigravity_sample.json  claude_sample.jsonl  codex_event_msg.jsonl  codex_sample.jsonl
tests/test_access/: test_detector.py  test_guard.py  test_models.py  test_proc.py
tests/test_parsers/: test_antigravity.py  test_claude.py  test_codex.py  test_opencode.py  test_pi.py  test_quarantine.py  test_registry.py
tests/validators/: test_session_note_check.py
(+21 files in other folders)
